Copy a header's values once on the way out
headers(name) wrapped Collections.list in List.copyOf, which copies the values
twice: Collections.list drains the enumeration into an ArrayList, and
List.copyOf then allocates a second array and copies that ArrayList into it.
The intermediate never escapes the method, so nothing can be holding a
reference that would let it change afterwards, and Collections.unmodifiableList
over it is as read-only to a caller as List.copyOf was. cookies() and headers()
already hand back their maps that way, for the same reason.

headers() computes each name's values with computeIfAbsent rather than
putIfAbsent. putIfAbsent takes the value as an argument, so the values were
read whether or not the map was going to keep them; a container that
enumerates a repeated name once per occurrence - which the servlet API neither
promises nor forbids - therefore read X-Tag twice and threw the second read
away. computeIfAbsent asks only when the name is new.

Neither method's answer changes. An unmodifiable view of an ArrayList equals
the List.copyOf of the same values, since List.equals compares contents, which
is what the assertions in RequestDetailsTest already do.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>